--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       </p>
       <p class="demo1">This is test2.</p>
       <p class="demo1">This is test3.</p>
+      <button onclick="myClickHandler();">Click Me</button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
